chore: remove Kiro specs and jqwik database artifacts
- Delete all .kiro/specs directories containing design, requirements, and task documentation
- Remove .jqwik-database file from repository
- Update .gitignore to reflect removal of temporary artifacts
- Clean up project structure by removing development workflow documentation